# untitled-insult-game

./: .gitignore  README.md  actors.py  requirements.txt  setup.cfg  setup.py  word2vec_testing.py
DF/: curties_example.py  goals.md
DF/notebooks/: Untitled.ipynb  Untitled1.ipynb  messages.ipynb  socket_server.ipynb
DF/scripts/: app.sh  jupyter.sh  lab.sh  run.sh  server.sh  term.sh
DF/src/game/: app.py  comm.py  constants.py  imports_ipython.py  sockets.py  term.py
DF/twine/: test.json
DF/worlds/: 9.12.2021, 9.33.52 AM Twine Archive.html  9.12.2021, 9.59.56 AM Twine Archive.html
game/: actors.py  app.py  cfg.py  cfg_elm_to_python.py  cfg_python.py  comm.py  constants.py  enemies.py  imports_ipython.py  intake.py  levels.py  server.py  term.py  utils.py  view.py  word_handling.py
resources/: insult_vectors.csv  vocab.csv
