# Setup configuration

[metadata]
name = insult_game
version = 0.0.1
description = The insult game.
long_description = file: README.rst

# URLs
url = https://github.com/feldman4/untitled-insult-game

# Author information
author = David Feldman, Bradley English, Alexander Hoch, Bruce Schultz
author_email = something
maintainer = David Feldman
maintainer_email = something

# License Information
license = Apache 2.0 License
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Gaming

keywords =
    Natural Language Processing
    Game

[options]
install_requires =
    pandas
    curtsies
    fire
    pygments
    xmltodict
    natsort

# Random options
zip_safe = false
python_requires = >=3.7
include_package_data = True

# Where is my code
packages = find:

[options.packages.find]
include =
    game
    game.*

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

;[options.entry_points]
;console_scripts =
;    game = game.cli:main

########################
# Flake8 Configuration #
########################
[flake8]
exclude =
    .git,
    __pycache__
max-line-length = 119

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = game

[coverage:paths]
source =
    game
    .tox/*/lib/python*/site-packages/game

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
